@@ -1,3 +1,11 @@
+2007-03-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/stopwords.R: Introduced a function returning the stopwords for
+	a given language (English, German and French at the moment)
+
+	* R/textdoccol.R (stemDoc): Stemming uses Rstem if available,
+	otherwise falls back to Snowball package.
+
 2007-01-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/dissimilarity-methods.Rd: Make clear that any method offered
